day4/security-context-pod2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: security-context-pod2
spec:
  securityContext:
    # ustawia, że dla dowolnego kontenera w Podzie wszystkie procesy będą uruchamiane z ID usera 1000
    runAsUser: 1000
  containers:
  - name: sec-ctx-demo1
    image: busybox:1.28
    command: [ "sh", "-c", "sleep 1h" ]
    securityContext:
      runAsUser: 2000
  - name: sec-ctx-demo2
    image: busybox:1.28
    command: [ "sh", "-c", "sleep 1h" ]
